# writing-tools

./: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml
e2e/: editor.spec.ts  home.spec.ts
electron/: main.cjs  preload.cjs
scripts/: tauri-with-rustup.cjs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: AboutModal.tsx  ChapterItem.tsx  Editor.tsx  MoodboardEditor.tsx  ProjectForm.tsx  Sidebar.tsx  Toolbar.tsx
src/db/: index.ts  localStore.ts  repository.ts  tauriStore.ts  types.ts
src/db/__tests__/: index.test.ts  repository.test.ts
src/hooks/: useBookEditor.ts  useProjects.ts
src/pages/: BookEditor.tsx  Home.tsx  ProjectSettings.tsx
src/utils/: content.ts  id.ts  ordering.ts
src/utils/__tests__/: content.test.ts  id.test.ts  ordering.test.ts
