[package]
name = "writing-tools"
version = "2.0.0"
description = "Offline-first writing app"
authors = ["Edgar Muniz Berlinck"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["clock"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
